--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           life.</p>
       </section>
       <section class="card">
-        <h2>Mug Shot</h2>
+        <h2>Student Photo</h2>
         <img src="images/mugshot.webp" width="250" height="250" alt="Gaweth" loading="lazy">
       </section>
     </div>
