--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WDD 231 for Gaweth Thalon</title>
+  <title>WDD 231 | Gaweth Thalon</title>
   <meta name="description"
-    content="This site contains my sample assignments written by Gaweth Thalon for WDD231 at BYUI Pathways">
+    content="This site contains my sample assignments written by Gaweth Thalon for WDD231 at BYUI Pathway">
   <meta name="author" content="Gaweth Thalon">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon.png">
+  <link rel="icon" type="image/png/svg" sizes="16x16" href="./images/flamme.svg">
 
   <!-- Style Links -->
   <link href="styles/normalize.css" rel="stylesheet">
@@ -57,7 +57,7 @@
       </section>
       <section class="card">
         <h2>Student Photo</h2>
-        <img src="images/mugshot.webp" width="250" height="250" alt="Gaweth" loading="lazy">
+        <img src="images/sp.webp" width="250" height="250" alt="Gaweth" loading="lazy">
       </section>
     </div>
     <section class="card courses">
@@ -75,10 +75,10 @@
   </main>
   <footer>
     <div class="social">
-      <a href="#" target="_blank"><img src="./images/flamme.svg" alt="Facebook Icon"></a>
-      <a href="#" target="_blank"><img src="./images/flamme.svg" alt="GitHub Icon"></a>
-      <a href="#" target="_blank"><img src="./images/flamme.svg" alt="Linked In Icon"></a>
-      <a href="#" target="_blank"><img src="./images/flamme.svg" alt="Whats App Icon"></a>
+      <a href="#" target="_blank"><img src="./images/instagram.png" alt="Facebook Icon"></a>
+      <a href="#" target="_blank"><img src="./images/fb.png.webp" alt="GitHub Icon"></a>
+      <a href="#" target="_blank"><img src="./images/github.png" alt="Linked In Icon"></a>
+      <a href="#" target="_blank"><img src="./images/twitter.svg" alt="Whats App Icon"></a>
     </div>
     <p>&copy; <span id="currentyear"></span> • Gaweth Thalon • Port-au-Prince, Haïti</p>
     <p id="lastModified"></p>
