--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </section>
       <section class="card">
         <h2>Student Photo</h2>
-        <img src="images/sp.webp" width="250" height="250" alt="Gaweth" loading="lazy">
+        <img src="images/studentphoto.webp" width="250" height="250" alt="Gaweth" loading="lazy">
       </section>
     </div>
     <section class="card courses">
