--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description"
     content="This site contains my sample assignments written by Gaweth Thalon for WDD231 at BYUI Pathway">
   <meta name="author" content="Gaweth Thalon">
-  <link rel="icon" type="image/png/svg" sizes="16x16" href="images/flamme.svg">
+  <link rel="icon" href="/images/favicon.ico">
 
   <!-- Style Links -->
   <link href="styles/normalize.css" rel="stylesheet">
