--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <nav id="navbar">
     <ul>
       <li class="active"><a href="index.html">Home</a></li>
-      <li><a href="chamber">Chamber Assignment</a></li>
+      <li><a href="/chamber /directory.html">Chamber Assignment</a></li>
       <li><a href="final/index.html">Final Project</a></li>
     </ul>
   </nav>
