--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -12,8 +12,7 @@
   <!-- Open Graph / Facebook Meta Tags -->
   <meta property="og:title" content="Discover Haitian Businesses | Haiti Chamber Directory">
   <meta property="og:description" content="Explore the trusted directory of leading Haitian companies.">
-  <meta property="og:image" content="https://yourusername.github.io/wdd231/chamber/images/social-preview.png">
-  <meta property="og:url" content="https://yourusername.github.io/wdd231/chamber/directory.html">
+  <meta property="og:url" content="https://tgaweth-byte.github.io/wdd231/chamber/directory.html">
   <meta property="og:type" content="website">
 
   <!-- Favicon - SIMPLIFIED & CORRECTED -->
